--- a/docker/builder/rpi/Dockerfile
+++ b/docker/builder/rpi/Dockerfile
@@ -14,6 +14,6 @@ ARG CC_TARGET
 ARG CC_TOOLCHAIN
 
 USER nobody:nogroup
-RUN task -d /build chan-quectel-clone
-RUN --network=none task -d /build chan-quectel-preset
-RUN --network=none task -d /build chan-quectel-package
+RUN task -d /build/task.d/chan-quectel clone
+RUN --network=none task -d /build/task.d/chan-quectel configure
+RUN --network=none task -d /build/task.d/chan-quectel build
