--- a/docker/debian/12/Dockerfile
+++ b/docker/debian/12/Dockerfile
@@ -15,9 +15,10 @@ ADD --chmod=444 http://github.com/go-task/task/releases/latest/download/task_lin
 
 FROM debian:bookworm-slim AS task-base
 ARG DEBIAN_FRONTEND
-RUN --network=none mkdir /build
+RUN --network=none mkdir -p /build/task.d
 RUN --network=none --mount=type=bind,from=dl-task,target=/build/download dpkg --install /build/download/task_linux_amd64.deb
 COPY --from=task --chown=nobody:nogroup Taskfile.dist.yaml /build/Taskfile.yaml
+COPY --from=task deb /build/task.d/deb
 
 FROM scratch AS dl-arm-gnu-toolchain
 ARG ARM_GNU_TOOLCHAIN_VER
@@ -29,18 +30,21 @@ ARG ARM_GNU_TOOLCHAIN_VER
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- xz-utils
-RUN --network=none task -d /build arm-gnu-toolchain-create-directory
+    task -d /build/task.d/deb install-pkgs -- xz-utils
+COPY --from=task arm-gnu-toolchain /build/task.d/arm-gnu-toolchain
+RUN --network=none task -d /build/task.d/arm-gnu-toolchain create-directory
 
 USER nobody:nogroup
-RUN --network=none --mount=type=bind,from=dl-arm-gnu-toolchain,target=/build/download task -d /build arm-gnu-toolchain-prepare
+RUN --network=none --mount=type=bind,from=dl-arm-gnu-toolchain,target=/build/download task -d /build/task.d/arm-gnu-toolchain prepare
 
 FROM task-base AS base
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- file build-essential dpkg-dev ca-certificates jq libsqlite3-dev libssl3
-RUN --network=none task -d /build create-build-directory create-dotenv chown-build-directory -- nobody:nogroup
+    task -d /build/task.d/deb install-pkgs -- file build-essential dpkg-dev ca-certificates jq libsqlite3-dev libssl3
+RUN --network=none task -d /build create-build-directory && \
+    task -d /build/task.d/deb create-dotenv && \
+    task -d /build chown-build-directory -- nobody:nogroup
 
 FROM scratch AS dl-asterisk
 ARG ASTVER
@@ -51,18 +55,35 @@ ARG ASTVER
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- wget libssl-dev libedit-dev uuid-dev libxml2-dev
+    task -d /build/task.d/deb install-pkgs -- wget libssl-dev libedit-dev uuid-dev libxml2-dev
+COPY --from=task asterisk /build/task.d/asterisk
+
 USER nobody:nogroup
 RUN --network=none --mount=type=bind,from=dl-asterisk,target=/build/download \
-    task -d /build asterisk-extract-sources
-RUN --mount=type=cache,target=/build/cache,sharing=locked,uid=65534,gid=65534 task -d /build asterisk-configure-${ASTVER}
-RUN --network=none task -d /build asterisk-build asterisk-install-headers
+    task -d /build/task.d/asterisk extract-sources
+RUN --mount=type=cache,target=/build/cache,sharing=locked,uid=65534,gid=65534 task -d /build/task.d/asterisk configure-${ASTVER}
+RUN --network=none task -d /build/task.d/asterisk build install-headers
+
+FROM scratch AS dl-ninja-build
+ADD --chmod=444 https://api.github.com/repos/ninja-build/ninja/releases/latest ninja-build-latest.json
+
+FROM base AS ninja-build
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    task -d /build/task.d/deb install-pkgs -- cmake curl libgtest-dev
+COPY --from=task ninja-build /build/task.d/ninja-build
+
+USER nobody:nogroup
+RUN --mount=type=bind,from=dl-ninja-build,target=/build/cache task -d /build/task.d/ninja-build download2
+RUN --network=none task -d /build/task.d/ninja-build configure build install
 
 FROM base as chan-quectel
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- git cmake libasound2-dev
-COPY --from=asterisk /build/install/ /
+    task -d /build/task.d/deb install-pkgs -- git cmake libasound2-dev
+COPY --from=task chan-quectel /build/task.d/chan-quectel
+COPY --from=asterisk --chown=root:root /build/install/ /
+COPY --from=ninja-build --link --chown=root:root /build/install /
 
 FROM chan-quectel AS chan-quectel-cc
 ARG CC_TARGET
@@ -70,7 +91,7 @@ ARG CC_TOOLCHAIN
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs-arch -- qemu-user-static \
+    task -d /build/task.d/deb install-pkgs-arch -- qemu-user-static \
     gcc-${CC_TOOLCHAIN} g++-${CC_TOOLCHAIN} binutils-${CC_TOOLCHAIN} \
     libsqlite3-dev:${CC_TARGET} libasound2-dev:${CC_TARGET}
 
@@ -90,7 +111,7 @@ ARG CC_TOOLCHAIN
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- qemu-user-static \
+    task -d /build/task.d/deb install-pkgs -- qemu-user-static \
     gcc-${CC_TOOLCHAIN} g++-${CC_TOOLCHAIN} binutils-${CC_TOOLCHAIN}
 COPY --from=rpi-debian --link . /build/rpi
 
@@ -100,9 +121,9 @@ ARG CC_TOOLCHAIN
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs-arch -- qemu-user-static \
+    task -d /build/task.d/deb install-pkgs-arch -- qemu-user-static \
     libsqlite3-dev:${CC_TARGET} libasound2-dev:${CC_TARGET}
-COPY --from=arm-gnu-toolchain --link /build/arm-gnu-toolchain/${CC_TOOLCHAIN} /build/arm-gnu-toolchain/${CC_TOOLCHAIN}
+COPY --from=arm-gnu-toolchain --link --chown=root:root /build/arm-gnu-toolchain/${CC_TOOLCHAIN} /build/arm-gnu-toolchain/${CC_TOOLCHAIN}
 
 FROM chan-quectel AS chan-quectel-rpi-ext
 ARG CC_TARGET
@@ -110,6 +131,6 @@ ARG CC_TOOLCHAIN
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- qemu-user-static
-COPY --from=arm-gnu-toolchain --link /build/arm-gnu-toolchain/${CC_TOOLCHAIN} /build/arm-gnu-toolchain/${CC_TOOLCHAIN}
+    task -d /build/task.d/deb install-pkgs -- qemu-user-static
+COPY --from=arm-gnu-toolchain --link --chown=root:root /build/arm-gnu-toolchain/${CC_TOOLCHAIN} /build/arm-gnu-toolchain/${CC_TOOLCHAIN}
 COPY --from=rpi-debian --link . /build/rpi
