--- a/docker/rpi-debian/12/Dockerfile
+++ b/docker/rpi-debian/12/Dockerfile
@@ -10,17 +10,35 @@ ADD --chmod=444 http://github.com/go-task/task/releases/latest/download/task_lin
 
 FROM balenalib/rpi-debian:bookworm-build AS task-base
 ARG DEBIAN_FRONTEND
-RUN --network=none mkdir /build
+RUN --network=none mkdir -p /build/task.d
 RUN --network=none --mount=type=bind,from=dl-task,target=/build/download dpkg --install /build/download/task_linux_arm.deb
 COPY --from=task --chown=nobody:nogroup Taskfile.dist.yaml /build/Taskfile.yaml
+COPY --from=task deb /build/task.d/deb
 
 FROM task-base AS base
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked -- \
-    task -d /build install-pkgs -- file ca-certificates jq dpkg-dev libsqlite3-dev libssl3
-RUN --network=none task -d /build create-build-directory create-dotenv chown-build-directory -- nobody:nogroup
+    task -d /build/task.d/deb install-pkgs -- file ca-certificates jq dpkg-dev libsqlite3-dev libssl3
+RUN --network=none task -d /build create-build-directory && \
+    task -d /build/task.d/deb create-dotenv && \
+    task -d /build chown-build-directory -- nobody:nogroup
+
+FROM scratch AS dl-ninja-build
+ADD --chmod=444 https://api.github.com/repos/ninja-build/ninja/releases/latest ninja-build-latest.json
+
+FROM base AS ninja-build
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    task -d /build/task.d/deb install-pkgs -- cmake curl libgtest-dev
+COPY --from=task ninja-build /build/task.d/ninja-build
+
+USER nobody:nogroup
+RUN --mount=type=bind,from=dl-ninja-build,target=/build/cache task -d /build/task.d/ninja-build download2
+RUN --network=none task -d /build/task.d/ninja-build configure build install
 
 FROM base AS chan-quectel
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    task -d /build install-pkgs -- cmake libasound2-dev asterisk-dev
+    task -d /build/task.d/deb install-pkgs -- cmake libasound2-dev asterisk-dev
+COPY --from=task chan-quectel /build/task.d/chan-quectel
+COPY --from=ninja-build --link --chown=root:root /build/install /
