--- a/docker/ubuntu/20.04/Taskfile.dist.yaml
+++ b/docker/ubuntu/20.04/Taskfile.dist.yaml
@@ -4,110 +4,30 @@ includes:
   builder:
     taskfile: ../../builder
     internal: true
-
-vars:
-  UBUNTU_20_04_ASTERISK_VERSION_NUM: 181000
+    vars:
+      OSNAME: 'ubuntu-20.04'
+      ASTERISK_VERSION_NUM: 181000    
 
 tasks:
   clean:
     desc: Remove package directory
     status:
-    - test ! -d package
+      - test ! -d package
     cmds:
-    - rm -rf package
+      - rm -rf package
 
   native:
     desc: Build chan_quectel on Ubuntu 20.04
     aliases: [default]
-    vars:
-      IMG_NAME: 'asterisk-dev/chan-quectel:ubuntu-20.04'
-      TMP_DIR:
-        sh: mktemp -d --suffix={{randInt 0 10}}
-      GIT_BRANCH:
-        sh: git branch --show-current
-    cmds:
-    - task: builder:native:build-img
-      vars:
-        TARGET: chan-quectel
-        IMG_NAME: '{{.IMG_NAME}}'
-        IID_FILE: '{{.TMP_DIR}}/img-base.id'
-    - task: builder:native:build
-      vars:
-        BASEIMG: '{{.IMG_NAME}}'
-        PRESET: deb
-        BRANCH: '{{.GIT_BRANCH}}'
-        IID_FILE: '{{.TMP_DIR}}/img.id'
-        ASTERISK_VERSION_NUM: '{{.UBUNTU_20_04_ASTERISK_VERSION_NUM}}'
-    - task: builder:copy-pkgs
-      vars:
-        DST_DIR: ''
-        DOCKER_IMG:
-          sh: cat {{.TMP_DIR}}/img.id
-    - defer: rm -rf {{.TMP_DIR}}
-    - defer: docker image rm $(cat {{.TMP_DIR}}/img.id) > /dev/null
+    deps:
+      - builder:native
 
   armhf:
     desc: Build chan_quectel for ARM on Ubuntu 20.04
-    vars:
-      IMG_NAME: 'asterisk-dev/chan-quectel:ubuntu-20.04.cc.armhf'
-      TMP_DIR:
-        sh: mktemp -d --suffix={{randInt 0 1000}}
-      GIT_BRANCH:
-        sh: git branch --show-current
-    cmds:
-    - task: builder:cc:build-img
-      vars:
-        IMG_NAME: '{{.IMG_NAME}}'
-        TARGET: chan-quectel-cc
-        IID_FILE: '{{.TMP_DIR}}/img-base.id'
-        CC_TARGET: armhf
-        CC_TOOLCHAIN: arm-linux-gnueabihf
-    - task: builder:cc:build
-      vars:
-        BASEIMG: '{{.IMG_NAME}}'
-        PRESET: deb
-        BRANCH: '{{.GIT_BRANCH}}'
-        IID_FILE: '{{.TMP_DIR}}/img.id'
-        CC_TARGET: armhf
-        CC_TOOLCHAIN: arm-linux-gnueabihf
-        ASTERISK_VERSION_NUM: '{{.UBUNTU_20_04_ASTERISK_VERSION_NUM}}'
-    - task: builder:copy-pkgs
-      vars:
-        DST_DIR: armhf
-        DOCKER_IMG:
-          sh: cat {{.TMP_DIR}}/img.id
-    - defer: rm -rf {{.TMP_DIR}}
-    - defer: docker image rm $(cat {{.TMP_DIR}}/img.id) > /dev/null
+    deps:
+      - builder:armhf
 
   arm64:
     desc: Build chan_quectel for ARM64 on Ubuntu 20.04
-    vars:
-      IMG_NAME: 'asterisk-dev/chan-quectel:ubuntu-20.04.cc.arm64'
-      TMP_DIR:
-        sh: mktemp -d --suffix={{randInt 0 10}}
-      GIT_BRANCH:
-        sh: git branch --show-current
-    cmds:
-    - task: builder:cc:build-img
-      vars:
-        IMG_NAME: '{{.IMG_NAME}}'
-        TARGET: chan-quectel-cc
-        IID_FILE: '{{.TMP_DIR}}/img-base.id'
-        CC_TARGET: arm64
-        CC_TOOLCHAIN: aarch64-linux-gnu
-    - task: builder:cc:build
-      vars:
-        BASEIMG: '{{.IMG_NAME}}'
-        PRESET: deb
-        BRANCH: '{{.GIT_BRANCH}}'
-        IID_FILE: '{{.TMP_DIR}}/img.id'
-        CC_TARGET: arm64
-        CC_TOOLCHAIN: aarch64-linux-gnu
-        ASTERISK_VERSION_NUM: '{{.UBUNTU_20_04_ASTERISK_VERSION_NUM}}'
-    - task: builder:copy-pkgs
-      vars:
-        DST_DIR: arm64
-        DOCKER_IMG:
-          sh: cat {{.TMP_DIR}}/img.id
-    - defer: rm -rf {{.TMP_DIR}}
-    - defer: docker image rm $(cat {{.TMP_DIR}}/img.id) > /dev/null
+    deps:
+      - builder:arm64
